samples/_failures_safe/1761800017_64984f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89823d68.c: In function ‘parser_init’:
./samples/SAFE/__tmp_89823d68.c:150:5: error: expected declaration or statement at end of input
  150 |     parser->lexer = lexer;
      |     ^~~~~~
